[gd_scene load_steps=4 format=3 uid="uid://vxlb82htiwur"]

[ext_resource type="Texture2D" uid="uid://lye5duy0xovt" path="res://sprites/Units/imp.png" id="1_fit7h"]
[ext_resource type="Script" path="res://interface/SpawnUnitGroup.gd" id="1_nfkj3"]
[ext_resource type="PackedScene" uid="uid://cdog854rvld6f" path="res://interface/add_button_group.tscn" id="3_3owe0"]

[node name="Info" type="Control"]
custom_minimum_size = Vector2(160, 280)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_right = -494.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nfkj3")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_right = 128.0
offset_bottom = 280.0

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(30, 72)
texture = ExtResource("1_fit7h")

[node name="Statistics" type="GridContainer" parent="."]
custom_minimum_size = Vector2(112, 104)
layout_mode = 0
offset_left = 46.0
offset_top = 24.0
offset_right = 158.0
offset_bottom = 128.0
columns = 3

[node name="Abilities" type="GridContainer" parent="."]
custom_minimum_size = Vector2(144, 56)
layout_mode = 2
offset_left = 3.0
offset_top = 224.0
offset_right = 155.0
offset_bottom = 280.0
mouse_filter = 2
columns = 2

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_right = 158.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilitiesLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 158.0
offset_bottom = 223.0
text = "Abilities
"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 128.0
offset_right = 159.0
offset_bottom = 151.0
text = "Selected Group"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GroupButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 30.0
offset_top = 160.0
offset_right = 62.0
offset_bottom = 192.0

[node name="GroupColor" type="ColorRect" parent="GroupButton"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.0823529, 0, 1)

[node name="Group ID" type="Label" parent="GroupButton"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddButtonGroup" parent="." instance=ExtResource("3_3owe0")]
layout_mode = 0
offset_left = 78.0
offset_top = 160.0
offset_right = 142.0
offset_bottom = 192.0

[node name="GroupSelection" type="Panel" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 156.0
offset_bottom = 129.0

[node name="ScrollContainer" type="ScrollContainer" parent="GroupSelection"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 148.0
offset_bottom = 123.0

[node name="UnitGroupGrid" type="GridContainer" parent="GroupSelection/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[connection signal="pressed" from="GroupButton" to="." method="_on_group_button_pressed"]
[connection signal="pressed" from="AddButtonGroup" to="." method="_on_add_button_group_pressed"]
